--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "com.learnxr.core": "https://github.com/dilmerv/com.learnxr.core.git",
-    "com.meta.xr.mrutilitykit": "78.0.0",
+    "com.meta.xr.mrutilitykit": "81.0.0",
     "com.meta.xr.sdk.all": "81.0.0",
+    "com.unity.animation.rigging": "1.3.1",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.learn.iet-framework": "4.1.5",
@@ -16,7 +17,7 @@
     "com.unity.xr.hands": "1.6.1",
     "com.unity.xr.interaction.toolkit": "3.2.1",
     "com.unity.xr.management": "4.5.1",
-    "com.unity.xr.meta-openxr": "2.2.0",
+    "com.unity.xr.meta-openxr": "2.3.0",
     "com.unity.xr.openxr": "1.15.1",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
