--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.test-framework": "1.6.0",
+    "com.unity.visualeffectgraph": "17.0.4",
     "com.unity.xr.androidxr-openxr": "1.0.1",
     "com.unity.xr.arfoundation": "6.0.6",
     "com.unity.xr.hands": "1.6.1",
